--- a/index.html
+++ b/index.html
@@ -2,138 +2,137 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Muayad Al Abduwani</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body class="dark">
-  <!-- NAV -->
-  <nav class="nav">
-    <div class="nav-inner">
-      <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
 
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#achievements">Achievements</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li>
-          <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme">
-            🌙
-          </button>
-        </li>
-      </ul>
+<!-- NAV -->
+<header class="nav">
+  <div class="nav-inner">
+    <div class="logo">Muayad Al Abduwani <span>• Entrepreneur</span></div>
+
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#achievements">Achievements</a>
+      <a href="#contact">Contact</a>
+      <a href="https://www.linkedin.com/in/muayad-al-abduwani-b182b7265" target="_blank">LinkedIn</a>
+    </nav>
+
+    <button id="themeToggle" aria-label="Toggle theme">🌙</button>
+  </div>
+</header>
+
+<!-- HERO -->
+<section id="home" class="hero">
+  <h1><span>Build.</span> Evolve.</h1>
+  <p>Start now — let’s connect and grow.</p>
+
+  <div class="hero-actions">
+    <a href="assets/resume.pdf" class="btn primary" download>View Resume</a>
+    <a href="#contact" class="btn outline">Contact Me</a>
+  </div>
+
+  <div class="tags">
+    <span>Data Science</span>
+    <span>AI Engineer</span>
+    <span>Machine Learning</span>
+    <span>Power BI</span>
+    <span>Python</span>
+    <span>SQL</span>
+    <span>Canva</span>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="section">
+  <div class="about">
+    <img src="assets/profile.png" alt="Muayad Al Abduwani" />
+    <div>
+      <h2>About</h2>
+      <p>Computer Science student with strong interest in AI, data-driven systems, entrepreneurship, and blockchain.</p>
+      <p>Former Head of Sports Committee at the Omani Students Society in Cardiff.</p>
+      <p><strong>Awarded Icons Oman 2025</strong> — Digital Content Creator.</p>
     </div>
-  </nav>
+  </div>
+</section>
 
-  <!-- HERO -->
-  <section id="home" class="hero">
-    <h1><span>Build.</span> Evolve.</h1>
-    <p>Start now — let’s connect and grow.</p>
+<!-- ACHIEVEMENTS -->
+<section id="achievements" class="section">
+  <h2 class="center">Achievements & Certifications</h2>
 
-    <div class="hero-buttons">
-      <a href="assets/resume.pdf" class="btn primary" download>View Resume</a>
-      <a href="#contact" class="btn outline">Contact Me</a>
+  <div class="grid">
+
+    <div class="card">
+      <div class="icon">🎓</div>
+      <h3>IGCSE</h3>
+      <p>2019 – 2021</p>
     </div>
 
-    <div class="tags">
-      <span>Data Science</span>
-      <span>AI Engineer</span>
-      <span>Machine Learning</span>
-      <span>Power BI</span>
-      <span>Python</span>
-      <span>SQL</span>
-      <span>Canva</span>
+    <div class="card">
+      <div class="icon">📘</div>
+      <h3>IB Diploma</h3>
+      <p>2021 – 2023</p>
     </div>
-  </section>
 
-  <!-- ABOUT -->
-  <section id="about" class="section narrow">
-    <h2>About</h2>
-    <p>Computer Science student with strong interest in AI, data-driven systems, entrepreneurship, and blockchain.</p>
-    <p>Former Head of Sports Committee at the Omani Students Society in Cardiff.</p>
-    <p>Awarded <strong>Icons Oman 2025</strong> — Digital Content Creator.</p>
-  </section>
-
-  <!-- ACHIEVEMENTS -->
-  <section id="achievements" class="section">
-    <h2 class="center">Achievements & Certifications</h2>
-
-    <div class="achievements-grid">
-
-      <a class="card">
-        <div class="icon">🎓</div>
-        <h3>IGCSE</h3>
-        <p>2019 – 2021</p>
-      </a>
-
-      <a class="card">
-        <div class="icon">📘</div>
-        <h3>IB Diploma</h3>
-        <p>2021 – 2023</p>
-      </a>
-
-      <a class="card">
-        <div class="icon">📝</div>
-        <h3>IELTS</h3>
-        <p>2023</p>
-      </a>
-
-      <a href="https://www.linkedin.com/company/omantel/" target="_blank" class="card">
-        <div class="icon">📡</div>
-        <h3>Omantel</h3>
-        <p>Big Data & Analytics<br/>Consumer Unit</p>
-        <span>2024</span>
-      </a>
-
-      <a href="https://www.linkedin.com/company/oman-data-park/" target="_blank" class="card">
-        <div class="icon">🏢</div>
-        <h3>Oman Data Park</h3>
-        <p>Center of Excellence</p>
-        <span>2025</span>
-      </a>
-
-      <a href="https://www.linkedin.com/company/orki-ai/" target="_blank" class="card">
-        <div class="icon">🤖</div>
-        <h3>ORKI AI</h3>
-        <p>Freelancer</p>
-        <span>2025</span>
-      </a>
-
-      <a href="https://www.linkedin.com/company/iconsoman/" target="_blank" class="card">
-        <div class="icon">🏆</div>
-        <h3>Icons Oman</h3>
-        <p>Digital Content Creator</p>
-        <span>2025</span>
-      </a>
-
-      <a href="https://www.linkedin.com/company/zain-omantel/" target="_blank" class="card">
-        <div class="icon">🌍</div>
-        <h3>Zain Omantel International</h3>
-        <p>Software Engineer</p>
-        <span>2025</span>
-      </a>
-
+    <div class="card">
+      <div class="icon">📝</div>
+      <h3>IELTS</h3>
+      <p>2023</p>
     </div>
-  </section>
 
-  <!-- CONTACT -->
-  <section id="contact" class="section narrow">
-    <h2 class="center">Contact</h2>
+    <a class="card link" href="https://www.linkedin.com/company/omantel/" target="_blank">
+      <div class="icon">📡</div>
+      <h3>Omantel</h3>
+      <p>Big Data & Analytics<br>Consumer Unit<br>2024</p>
+    </a>
 
-    <form class="contact-form">
-      <div class="row">
-        <input type="text" placeholder="Your Name" required />
-        <input type="email" placeholder="Your Email" required />
-      </div>
-      <textarea placeholder="Your Message" required></textarea>
-      <button class="btn primary full">Send Message</button>
-    </form>
-  </section>
+    <a class="card link" href="https://www.linkedin.com/company/oman-data-park/" target="_blank">
+      <div class="icon">🏢</div>
+      <h3>Oman Data Park</h3>
+      <p>Center of Excellence<br>2025</p>
+    </a>
 
-  <footer>© 2026 Muayad Al Abduwani</footer>
+    <a class="card link" href="https://www.linkedin.com/company/orki-ai/" target="_blank">
+      <div class="icon">🤖</div>
+      <h3>ORKI AI</h3>
+      <p>Freelancer<br>2025</p>
+    </a>
 
-  <script src="script.js"></script>
+    <a class="card link" href="https://www.linkedin.com/company/iconsoman/" target="_blank">
+      <div class="icon">🏆</div>
+      <h3>Icons Oman</h3>
+      <p>Digital Content Creator<br>2025</p>
+    </a>
+
+    <a class="card link highlight" href="https://www.linkedin.com/company/zain-omantel/" target="_blank">
+      <div class="icon">🌍</div>
+      <h3>Zain Omantel International</h3>
+      <p>Software Engineer<br>2025</p>
+    </a>
+
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="section">
+  <h2 class="center">Contact</h2>
+
+  <form class="contact-form" action="https://formsubmit.co/muayadabduwani@gmail.com" method="POST">
+    <div class="row">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+    </div>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    <button class="btn primary" type="submit">Send Message</button>
+  </form>
+</section>
+
+<footer>© 2026 Muayad Al Abduwani</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
